# local-llm

./: .gitignore  README.md  proxychains-ngrok.conf
embedding_server/: __init__.py  app.py  benchmark.py  pyproject.toml
embedding_server/tests/: test_app.py
proxy_server/: app.py
scripts/: deploy-remote-proxy.sh  install-local-embedding-service.sh  install-local-tunnel-service.sh  install-local-vllm-service.sh  install-vps-ssh-key.py  model-service.sh  start-embeddings.sh  start-tunnel.sh  start-vllm.sh  test-openai-chat.sh  test-openai-embeddings.sh
