[project]
name = "local-llm-embedding-server"
version = "0.1.0"
requires-python = "==3.12.*"
dependencies = [
  "accelerate==1.7.0",
  "fastapi==0.115.6",
  "flash-attn @ https://github.com/Dao-AILab/flash-attention/releases/download/v2.8.3/flash_attn-2.8.3%2Bcu12torch2.9cxx11abiTRUE-cp312-cp312-linux_x86_64.whl",
  "torch==2.9.1",
  "transformers==4.51.0",
  "uvicorn[standard]==0.34.0",
]

[dependency-groups]
dev = [
  "httpx==0.28.1",
  "openai>=1.109.0,<3",
  "pytest==8.3.5",
]

[tool.uv]
package = false

[tool.uv.sources]
torch = { index = "pytorch-cu129" }

[tool.pytest.ini_options]
pythonpath = [".."]
testpaths = ["tests"]

[[tool.uv.index]]
name = "pytorch-cu129"
url = "https://download.pytorch.org/whl/cu129"
explicit = true
